--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         .personal_portrait__BAkO0 {
         border-radius: 0; /* 去除圆角 */
         width: 200px; /* 设置宽度 */
-        height: 250px; /* 设置高度 */
+        height: 280px; /* 设置高度 */
     }
     </style>
 </head>
@@ -109,6 +109,8 @@
                             <div class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
                                         href="https://github.com/liw95/DiffLoc">Paper</a></span><span
                                     class="publication_link__fXY43"><a
+                                        href="https://drive.google.com/file/d/1P80GGOAyWRF5BICAQ990PDO0iByW2kbP/view?usp=sharing">Poster</a></span><span                                                             
+                                    class="publication_link__fXY43"><a
                                         href="https://github.com/liw95/DiffLoc">Video</a></span><span
                                     class="publication_link__fXY43"><a
                                         href="https://github.com/liw95/DiffLoc">Code</a></span></div>
@@ -155,6 +157,8 @@
                             <div class="publication_venue__1Dv6R"><span>CVPR</span><span>2023</span><span></span>&nbsp;</div>
                             <div class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
                                         href="https://openaccess.thecvf.com/content/CVPR2023/html/Li_SGLoc_Scene_Geometry_Encoding_for_Outdoor_LiDAR_Localization_CVPR_2023_paper.html">Paper</a></span><span
+                                    class="publication_link__fXY43"><a
+                                        href="https://drive.google.com/file/d/1P4D--SfRt62KJGkCW4HiYtOo6v-Mrmz2/view?usp=sharing">Poster</a></span><span      
                                     class="publication_link__fXY43"><a
                                         href="https://www.youtube.com/watch?v=Tek6yA20N7M&t=1s">Video</a></span><span
                                     class="publication_link__fXY43"><a
