--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     class="publication_link__fXY43"><a
                                         href="https://drive.google.com/file/d/1P80GGOAyWRF5BICAQ990PDO0iByW2kbP/view?usp=sharing">Poster</a></span><span                                                             
                                     class="publication_link__fXY43"><a
-                                        href="https://github.com/liw95/DiffLoc">Video</a></span><span
+                                        href="https://www.youtube.com/watch?v=sSW9nHQR0nc&t=31s">Video</a></span><span
                                     class="publication_link__fXY43"><a
                                         href="https://github.com/liw95/DiffLoc">Code</a></span></div>
                         </div>
@@ -227,7 +227,7 @@
                     <li>
                         <div style="display:inline">
                             Conference  Reviewers:&nbsp;</div><span
-                            class="styles_collaborator__VflHz">PRCV 23/24</span>.
+                            class="styles_collaborator__VflHz">PRCV 23/24, NeurIPS 24</span>.
                     </li>
                 </ul>
             </section>
