--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <div class="publication_authors__qkFXc"><strong>Wen Li</strong>, Yuyang Yang, ShangShu Yu, Guosheng Hu, Chenglu Wen, Ming Cheng, Cheng Wang</div>
                             <div class="publication_venue__1Dv6R"><span>CVPR</span><span>2024</span><span></span>&nbsp;</div>
                             <div class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
-                                        href="https://github.com/liw95/DiffLoc">Paper</a></span><span
+                                        href="https://openaccess.thecvf.com/content/CVPR2024/papers/Li_DiffLoc_Diffusion_Model_for_Outdoor_LiDAR_Localization_CVPR_2024_paper.pdf">Paper</a></span><span
                                     class="publication_link__fXY43"><a
                                         href="https://drive.google.com/file/d/1P80GGOAyWRF5BICAQ990PDO0iByW2kbP/view?usp=sharing">Poster</a></span><span                                                             
                                     class="publication_link__fXY43"><a
@@ -125,7 +125,7 @@
                             <div class="publication_authors__qkFXc">Bochun Yang, Zijun Li, <strong>Wen Li</strong>, Zhipeng Cai, Chenlu Wen, Yu Zang, Matthias M&uuml;ller, Cheng Wang</div>
                             <div class="publication_venue__1Dv6R"><span>CVPR</span><span>2024</span><span></span>&nbsp;</div>
                             <div class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
-                                        href="https://github.com/Ybchun/LiSA">Paper</a></span><span
+                                        href="https://openaccess.thecvf.com/content/CVPR2024/papers/Yang_LiSA_LiDAR_Localization_with_Semantic_Awareness_CVPR_2024_paper.pdf">Paper</a></span><span
                                     class="publication_link__fXY43"><a
                                         href="https://github.com/Ybchun/LiSA">Code</a></span></div>
                         </div>
