--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <li>
                         <div style="display:inline">
                             Journal Reviewers:&nbsp;</div><span
-                            class="styles_collaborator__VflHz">IEEE TOG, IEEE TITS, IEEE TGRS, IEEE GRSL, JAG</span>.
+                            class="styles_collaborator__VflHz">IEEE TPAMI, IEEE TITS, IEEE TGRS, IEEE GRSL, ACM TOG, JAG</span>.
                     </li>
                     <li>
                         <div style="display:inline">
