--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <section>
                 <h2>Recent News</h2>
                 <ul>
+                    <li><strong>[2024.08]</strong> One papers got accepted by TITS. </li>
                     <li><strong>[2024.03]</strong> Two papers got accepted by CVPR2024. </li>
                     <li><strong>[2023.10]</strong> One paper got accepted by TITS. </li>
                     <li><strong>[2023.03]</strong> One paper got accepted by CVPR2023. </li>
@@ -220,7 +221,7 @@
                     <li>
                         <div style="display:inline">
                             Journal Reviewers:&nbsp;</div><span
-                            class="styles_collaborator__VflHz">IEEE TPAMI, IEEE TITS, IEEE TGRS, IEEE GRSL, ACM TOG, JAG</span>.
+                            class="styles_collaborator__VflHz">TPAMI, TOG, TITS, TGRS, GRSL, JAG</span>.
                     </li>
                     <li>
                         <div style="display:inline">
