--- a/index.html
+++ b/index.html
@@ -99,7 +99,19 @@
             <section>
                 <h2>Publications<br class="publication-list_mobileBreak__24vsO"></h2>
                 <div>
-
+                    
+                    <div class="publication_publication__1Icb_">
+                        <div class="publication_image__1EUuC"><img src="images/CrackU2Net.png" itemprop="image" alt="PontTuset" width="180"
+                                         style="border-style: none"></div>
+                        <div class="publication_info__kLRGP">
+                            <div class="publication_title__3m6SE">Crack-U<sup>2Net: Multiscale Feature Learning Network for Pavement Crack Detection From Large-Scale MLS Point Clouds</div>
+                            <div class="publication_authors__qkFXc">Huifang Feng, <strong>Wen Li</strong>, Lingfei Ma, Yiping Chen, Haiyan Guan, Yongtao Yu, Jos&eacute; Marcato, Jonathan Li</div>
+                            <div class="publication_venue__1Dv6R"><span>IEEE TITS</span><span></span>&nbsp;</div>
+                            <div class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
+                                        href="https://ieeexplore.ieee.org/abstract/document/10623842">Paper</a></span>
+                            </div>
+                    </div>
+                    
                     <div class="publication_publication__1Icb_">
                         <div class="publication_image__1EUuC"><img src="images/DiffLoc.png" itemprop="image" alt="PontTuset" width="180"
                                          style="border-style: none"></div>
