--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             </section>
             <section>
                 <h2>Publications<br class="publication-list_mobileBreak__24vsO"></h2>
+                <div class="publication-list_smallText__pUJXB">* denotes equal contribution.</div>
                 <div>
                     
                     <div class="publication_publication__1Icb_">
@@ -137,7 +138,7 @@
                         <div class="publication_info__kLRGP">
                             <div class="publication_title__3m6SE">LiSA: LiDAR Localization with Semantic Awareness</div>
                             <div class="publication_authors__qkFXc">Bochun Yang, Zijun Li, <strong>Wen Li</strong>, Zhipeng Cai, Chenlu Wen, Yu Zang, Matthias M&uuml;ller, Cheng Wang</div>
-                            <div class="publication_venue__1Dv6R"><span>CVPR</span><span>2024</span><span></span>&nbsp;</div>
+                            <div class="publication_venue__1Dv6R"><span>CVPR 2024</span><span class="publication_highlights__2ILmf">(Highlight, 2.8% of 11532)</span>&nbsp;</div>
                             <div class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
                                         href="https://openaccess.thecvf.com/content/CVPR2024/papers/Yang_LiSA_LiDAR_Localization_with_Semantic_Awareness_CVPR_2024_paper.pdf">Paper</a></span><span
                                     class="publication_link__fXY43"><a
