--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
                             <div class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
                                         href="https://openaccess.thecvf.com/content/CVPR2024/papers/Yang_LiSA_LiDAR_Localization_with_Semantic_Awareness_CVPR_2024_paper.pdf">Paper</a></span><span
                                     class="publication_link__fXY43"><a
+                                        href="https://drive.google.com/file/d/1LwkMGVf3AQ-0xVQ13K7xA8YipRE-MuAP/view?usp=sharing">Poster</a></span><span    
+                                    class="publication_link__fXY43"><a
                                         href="https://github.com/Ybchun/LiSA">Code</a></span></div>
                         </div>
                     </div>
