--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                          style="border-style: none"></div>
                         <div class="publication_info__kLRGP">
                             <div class="publication_title__3m6SE">SGLoc: Scene Geometry Encoding for Outdoor LiDAR Localization</div>
-                            <div class="publication_authors__qkFXc"><strong>Wen Li</strong>, Shangshu Yu, Cheng Wang, Guosheng Hu, Siqi Shen, Chenglu Wen</div>
+                            <div class="publication_authors__qkFXc"><strong>Wen Li</strong><sup>*</sup>, Shangshu Yu<sup>*</sup>, Cheng Wang, Guosheng Hu, Siqi Shen, Chenglu Wen</div>
                             <div class="publication_venue__1Dv6R"><span>CVPR</span><span>2023</span><span></span>&nbsp;</div>
                             <div class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
                                         href="https://openaccess.thecvf.com/content/CVPR2023/html/Li_SGLoc_Scene_Geometry_Encoding_for_Outdoor_LiDAR_Localization_CVPR_2023_paper.html">Paper</a></span><span
