--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                          style="border-style: none"></div>
                     <div class="publication_info__kLRGP">
                             <div class="publication_title__3m6SE">A GCN-based Method for Extracting Power Lines and Pylons from Airborne LiDAR Data</div>
-                            <div class="publication_authors__qkFXc"><strong>Wen Li</strong>, Zhipeng Luo, Zhenlong Xiao, Yiping Chen, Cheng Wang, Jonathan Li</div>
+                            <div class="publication_authors__qkFXc"><strong>Wen Li</strong><sup>*</sup>, Zhipeng Luo<sup>*</sup>, Zhenlong Xiao, Yiping Chen, Cheng Wang, Jonathan Li</div>
                             <div class="publication_venue__1Dv6R"><span>IEEE TGRS</div>
                             <div class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
                                         href="https://ieeexplore.ieee.org/abstract/document/9430171/">Paper</a></span>
