--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
         </div>
     </div>
 
+<p><script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=P83YLG3Qln2qZKERtETvhj9wvWlSZgdgdj93LimmDR0&cl=ffffff&w=a"></script><p>
 </body>
 
 </html>
