--- a/index.html
+++ b/index.html
@@ -263,13 +263,11 @@
                     </li>
                 </ul>
             </section>
-
-            <footer class="styles_footer__3qp3V">
-                <p><script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=P83YLG3Qln2qZKERtETvhj9wvWlSZgdgdj93LimmDR0&cl=ffffff&w=a"></script></p>
-            </footer>
         </div>
     </div>
-
+<div id="map-container" style="width: 400px; height: 300px; overflow: hidden;">
+  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=P83YLG3Qln2qZKERtETvhj9wvWlSZgdgdj93LimmDR0&cl=ffffff&w=a"></script>
+</div>
 </body>
 
 </html>
