--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     <li>
                         <div style="display:inline">
                             Email:&nbsp;</div><span
-                            class="styles_collaborator__VflHz">liwen777@stu.xmu.edu.cn</span>.
+                            class="styles_collaborator__VflHz">liwen777@stu.xmu.edu.cn, wen.li.sd95@gmail.com</span>.
                     </li>
                 </ul>
                 <div id="map-container" style="width: 400px; height: 300px; overflow: hidden; margin: 0 auto;">
