--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <li>
                         <div style="display:inline">
                             Conference  Reviewers:&nbsp;</div><span
-                            class="styles_collaborator__VflHz">NeurIPS, ICLR</span>.
+                            class="styles_collaborator__VflHz">NeurIPS, ICLR, AISTATS</span>.
                     </li>
                 </ul>
             </section>
