--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     </li>
                 </ul>
                 <div id="map-container" style="width: 400px; height: 300px; overflow: hidden; margin: 0 auto;">
-                <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=P83YLG3Qln2qZKERtETvhj9wvWlSZgdgdj93LimmDR0&cl=ffffff&w=a"></script>
+                <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=P83YLG3Qln2qZKERtETvhj9wvWlSZgdgdj93LimmDR0&cl=ffffff&w=a&t=tt&d=P83YLG3Qln2qZKERtETvhj9wvWlSZgdgdj93LimmDR0"></script>
                 </div>
             </section>
         </div>
