--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
             <section>
                 <h2>Recent News</h2>
                 <ul>
-                    <li><strong>[2024.08]</strong> One papers got accepted by TITS. </li>
+                    <li><strong>[2024.11]</strong> Honored with the National Scholarship. </li>
+                    <li><strong>[2024.08]</strong> One paper got accepted by TITS. </li>
                     <li><strong>[2024.03]</strong> Two papers got accepted by CVPR2024. </li>
                     <li><strong>[2023.10]</strong> One paper got accepted by TITS. </li>
                     <li><strong>[2023.03]</strong> One paper got accepted by CVPR2023. </li>
