--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <section>
                 <h2>Recent News</h2>
                 <ul>
+                    <li><strong>[2024.12]</strong> Two papers got accepted by AAAI2024. </li>
                     <li><strong>[2024.11]</strong> Honored with the National Scholarship. </li>
                     <li><strong>[2024.08]</strong> One paper got accepted by TITS. </li>
                     <li><strong>[2024.03]</strong> Two papers got accepted by CVPR2024. </li>
