--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="styles_container__1_WuM">
             <section>
                 <div class="personal_profile__BdQI4"><img class="personal_portrait__BAkO0"
-                        src="images/photo.png" alt="pottrait">
+                        src="images/photo2.jpg" alt="pottrait">
                     <div class="personal_profileInfo__1Y4pW">
                         <h1 class="personal_name__1_mHK">Wen Li</h1>
                         <h3 class="personal_chineseName__18aOD">李文</h3>
