--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <li>
                         <div style="display:inline">
                             Conference  Reviewers:&nbsp;</div><span
-                            class="styles_collaborator__VflHz">CVPR, NeurIPS, ICLR, AISTATS</span>.
+                            class="styles_collaborator__VflHz">CVPR, NeurIPS, ICML, ICLR, AISTATS</span>.
                     </li>
                 </ul>
             </section>
