--- a/index.html
+++ b/index.html
@@ -104,6 +104,31 @@
                 <h2>Publications<br class="publication-list_mobileBreak__24vsO"></h2>
                 <div class="publication-list_smallText__pUJXB">* denotes equal contribution.</div>
                 <div>
+                    <div class="publication_publication__1Icb_">
+                        <div class="publication_image__1EUuC"><img src="images/MNCL.png" itemprop="image" alt="PontTuset" width="180"
+                                         style="border-style: none"></div>
+                    <div class="publication_info__kLRGP">
+                            <div class="publication_title__3m6SE">Text to Point Cloud Localization with Multi-Level Negative Contrastive Learning</div>
+                            <div class="publication_authors__qkFXc">Dunqiang Liu, Shujun Huang, <strong>Wen Li</strong>, Siqi Shen, Cheng Wang</div>
+                            <div class="publication_venue__1Dv6R"><span>AAAI 2025</div>
+                            <div class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
+                                        href="https://github.com/dqliua/MNCL">Code</a></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="publication_publication__1Icb_">
+                        <div class="publication_image__1EUuC"><img src="images/STGC-NeRF.png" itemprop="image" alt="PontTuset" width="180"
+                                         style="border-style: none"></div>
+                    <div class="publication_info__kLRGP">
+                            <div class="publication_title__3m6SE">STGC-NeRF: Spatial-temporal Geometric Consistency for LiDAR Neural Radiance Fields in Dynamic Scenes</div>
+                            <div class="publication_authors__qkFXc">Shangshu Yu<sup>*</sup>, Xiaotian Sun<sup>*</sup>, <strong>Wen Li</strong><sup>*</sup>, Qingshan Xu, Zhimin Yuan, Sijie Wang, Rui She, Cheng Wang</div>
+                            <div class="publication_venue__1Dv6R"><span>AAAI 2025</div>
+                            <div class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
+                                        href="https://github.com/PSYZ1234/STGC-NeRF">Code</a></span>
+                            </div>
+                        </div>
+                    </div>
                     
                     <div class="publication_publication__1Icb_">
                         <div class="publication_image__1EUuC"><img src="images/CrackU2Net.png" itemprop="image" alt="PontTuset" width="180"
