--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
                             <div class="publication_venue__1Dv6R"><span>CVPR</span><span>2024</span><span></span>&nbsp;</div>
                             <div class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
                                         href="https://openaccess.thecvf.com/content/CVPR2024/papers/Li_DiffLoc_Diffusion_Model_for_Outdoor_LiDAR_Localization_CVPR_2024_paper.pdf">Paper</a></span><span
+                                    class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
+                                        href="https://openaccess.thecvf.com/content/CVPR2024/supplemental/Li_DiffLoc_Diffusion_Model_CVPR_2024_supplemental.pdf">Supp</a></span><span
                                     class="publication_link__fXY43"><a
                                         href="https://drive.google.com/file/d/1P80GGOAyWRF5BICAQ990PDO0iByW2kbP/view?usp=sharing">Poster</a></span><span                                                             
                                     class="publication_link__fXY43"><a
@@ -201,6 +203,8 @@
                             <div class="publication_venue__1Dv6R"><span>CVPR</span><span>2023</span><span></span>&nbsp;</div>
                             <div class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
                                         href="https://openaccess.thecvf.com/content/CVPR2023/html/Li_SGLoc_Scene_Geometry_Encoding_for_Outdoor_LiDAR_Localization_CVPR_2023_paper.html">Paper</a></span><span
+                                    class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
+                                        href="https://openaccess.thecvf.com/content/CVPR2023/supplemental/Li_SGLoc_Scene_Geometry_CVPR_2023_supplemental.pdf">Supp</a></span><span
                                     class="publication_link__fXY43"><a
                                         href="https://drive.google.com/file/d/1P4D--SfRt62KJGkCW4HiYtOo6v-Mrmz2/view?usp=sharing">Poster</a></span><span      
                                     class="publication_link__fXY43"><a
