--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
                             <div class="publication_venue__1Dv6R"><span>CVPR 2024</span><span class="publication_highlights__2ILmf">(Highlight, 2.8% of 11532)</span>&nbsp;</div>
                             <div class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
                                         href="https://openaccess.thecvf.com/content/CVPR2024/papers/Yang_LiSA_LiDAR_Localization_with_Semantic_Awareness_CVPR_2024_paper.pdf">Paper</a></span><span
+                                    class="publication_links__aEpO_"><span class="publication_link__fXY43"><a
+                                        href="https://openaccess.thecvf.com/content/CVPR2024/supplemental/Yang_LiSA_LiDAR_Localization_CVPR_2024_supplemental.zip">Supp</a></span><span
                                     class="publication_link__fXY43"><a
                                         href="https://drive.google.com/file/d/1LwkMGVf3AQ-0xVQ13K7xA8YipRE-MuAP/view?usp=sharing">Poster</a></span><span    
                                     class="publication_link__fXY43"><a
