--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         supervised by Profs. <a href="https://uwaterloo.ca/geospatial-intelligence/profiles/jonathan-li">Jonathan Li</a> and <a href="https://www.researchgate.net/profile/Zhenlong-Xiao">Zhenlong Xiao</a>.
                         My interests focus on <strong>LiDAR Localization</strong> and <strong>LiDAR Segmentation</strong>.
                         
-                        <p><strong><span style="color:red">I am looking for a Postdoc positions for 3D Vision starting later next year. I would be delighted to discuss any opportunities. Please feel free to reach out to me. </span></strong>
+                        <p><strong><span style="color:red">I am looking for a Postdoc positions for 3D Vision starting in the latter half of this year. I would be delighted to discuss any opportunities. Please feel free to reach out to me. </span></strong>
                     </p>
                 </div>
             </section>
